--- a/game-site.html
+++ b/game-site.html
@@ -6,6 +6,12 @@
 </head>
 <style type="text/css">
 
+
+    html, body, h2, h5, canvas {
+        margin: 0;
+        padding: 0;
+        border: 0;
+    }
     button {
         background-color: #ff4500;
         border: none;
@@ -24,6 +30,14 @@
         height: 100%;
         margin: 0;
         overflow-x: hidden;}
+
+    .zagolovok span {
+        display: inline;
+        background-color: #ff4500;
+        padding: 10px 10;
+        color: #FFFFFF;
+        font-size: 45px;
+    }
 
     .sidenav {
         width: 200px;
@@ -67,8 +81,10 @@
     <a href="https://otzovik.com/reviews/beamng_drive-igra_dlya_pc/"><strong>Отзывы об игре</strong></a>
 
 </div>
-<div class="bg"> <h2 style="background-color: #E1F896">BeamNG Drive</h2>
-<h5 style="background-color: #E1F896">самая реалистичная физика взаимодействия автомобилей!<br>ссылка на скачивание игры и модификаций ниже</h5>
+<div class="bg"> <h2 class="zagolovok"><span>BeamNG Drive</span></h2>
+    <br>
+    <h5 class="zagolovok"><span>Самая реалистичная физика взаимодействия автомобилей!<br>ссылка на скачивание игры и модификаций ниже</span></h5>
+    <br>
 <button onclick="window.location.href = 'https://thelastgame.ru/download/BeamNG_drive_0.20.2.0.torrent';">Скачать</button>
 <button onclick="window.location.href = 'https://www.beamng.com/resources/';">Моды</button>
   </div>
