--- a/game-site.html
+++ b/game-site.html
@@ -107,6 +107,7 @@
         display: inline-block;
         font-size: 20px;
         margin: 4px 2px;
+        display: none;
     }
 </style>
 <body>
@@ -139,7 +140,7 @@
         });
     </script>
     <button class="spoiler-title">Показать описание игры</button>
-    <div class="spoiler-body" style="display: none;">
+    <div class="spoiler-body" >
         BeamNG.drive — компьютерная игра в жанре автосимулятор, которая разрабатывается и издаётся компанией BeamNG для
         платформы Windows.<br>
         Использует уникальную физику мягких тел. Является идейным продолжением предыдущего проекта разработчиков — Rigs
