--- a/public_html/author.html
+++ b/public_html/author.html
@@ -5,7 +5,8 @@
     <title>Об авторе</title>
     <link href="./../css/for_author.css" rel="stylesheet"/>
 </head>
-     <body background="./../css/fon.jpg">
+     <body>
+     <div class="bg">
     <div id="gall">
         <img src="./../css/1.jpg" alt="1"/>
         <img src="./../css/2.jpg" alt="2"/>
@@ -13,9 +14,9 @@
     </div>
     <h2 class="info">Я - начинающий в мире программирования, который готов изучать новое
     </h2>
-    <ul class="levo">
-    <li>Самый молодой и перспективный(наверное) программист Нового города<br></li>
-        <li>Я нацелен на рост в IT-сфере</li>
-    </ul>
+    <h2 class="info">
+    Самый молодой и перспективный(наверное) программист Нового города<br>
+        Я нацелен на рост в IT-сфере</h2>
+     </div>
     </body>
 </html>
