--- a/public_html/otzivi.html
+++ b/public_html/otzivi.html
@@ -5,48 +5,49 @@
     <title>Отзывы</title>
     <link href="./../css/for_otzivi.css" rel="stylesheet"/>
 </head>
-<body background="./../css/fon.jpg">
-<div class="verh">ОТЗЫВЫ ОБ ИГРЕ BeamNG DRIVE</div>
-<br> <br>
-<img src="./../css/v1.jpg" alt="leviy" class="leviy">
-<img src="./../css/v2.jpg" alt="praviy" class="praviy">
-<div class="otziv">
-    <img src="./../css/768.jpg" alt="avatarka">
-    <p><span>ДАНИЛ БОРИСОВ</span></p>
-    <p>Интересные аварии получаются игра поднимает настроение отличная детализация мира и разрушения автомобиля</p>
-</div>
-<div class="otziv">
-    <img src="./../css/768.jpg" alt="avatar">
-    <p><span>Алексей Фролов</span></p>
-    <p>Отличная игра где придется разрушать машины, так как вы еще не видели. В игре присутствует выбор машин,
-        редактирование их подвеска, колеса и так далее. Очень нравится физика игры и пусть она не доработана.</p>
-</div>
-<div class="otziv">
-    <img src="./../css/768.jpg" alt="avatar">
-    <p><span>FunSnake</span></p>
-    <p>Об этой игре я узнал из ютуба. Решил скачать, сразу установил кучу плагинов и начал играть. Конечно должен быть
-        очень даже неслабый комп для этой игры хотя бы intel core i3 к примеру</p>
-</div>
-<div class="otziv">
-    <img src="./../css/768.jpg" alt="avatar">
-    <p><span>STAR666</span></p>
-    <p>BeamNG drive- игра для PC, по моему мнению одна из лучших игр с повреждением автомобилей, купив эту игру вы не
-        пожалеете об затраченных средствах</p>
-</div>
-<div class="otziv">
-    <img src="./../css/768.jpg" alt="avatar">
-    <p><span>Danitoscool</span></p>
-    <p>Наткнулся на эту игру примерно в 2015 году, тогда меня это мягко сказать поразило. Мне было ужасно приятно
-        смотреть на реалистичные разрушения машин. В этой игре нет какого либо сюжета, гонок. Это песочница</p>
-</div>
-<div class="otziv">
-    <img src="./../css/768.jpg" alt="avatar">
-    <p><span>hitor2015</span></p>
-    <p>Игра шикарная, нет слов. Графика, механика игры. Весь геймплей вообщем. Можно делать свои карты, свои машины
-        добавлять в качестве мода. В игре хорошая физика, просто превосходная. Любое столкновение с чем-либо приводит к
-        каким-то последствиям. </p>
+<body>
+<div class="bg">
+    <div class="verh">ОТЗЫВЫ ОБ ИГРЕ BeamNG DRIVE</div>
+    <br>
+    <div class="otziv">
+        <img src="./../css/768.jpg" alt="avatarka">
+        <p><span>ДАНИЛ БОРИСОВ</span></p>
+        <p>Интересные аварии получаются игра поднимает настроение отличная детализация мира и разрушения автомобиля</p>
+    </div>
+    <div class="otziv">
+        <img src="./../css/768.jpg" alt="avatar">
+        <p><span>Алексей Фролов</span></p>
+        <p>Отличная игра где придется разрушать машины, так как вы еще не видели. В игре присутствует выбор машин,
+            редактирование их подвеска, колеса и так далее. Очень нравится физика игры и пусть она не доработана.</p>
+    </div>
+    <div class="otziv">
+        <img src="./../css/768.jpg" alt="avatar">
+        <p><span>FunSnake</span></p>
+        <p>Об этой игре я узнал из ютуба. Решил скачать, сразу установил кучу плагинов и начал играть. Конечно должен
+            быть
+            очень даже неслабый комп для этой игры хотя бы intel core i3 к примеру</p>
+    </div>
+    <div class="otziv">
+        <img src="./../css/768.jpg" alt="avatar">
+        <p><span>STAR666</span></p>
+        <p>BeamNG drive- игра для PC, по моему мнению одна из лучших игр с повреждением автомобилей, купив эту игру вы
+            не
+            пожалеете об затраченных средствах</p>
+    </div>
+    <div class="otziv">
+        <img src="./../css/768.jpg" alt="avatar">
+        <p><span>Danitoscool</span></p>
+        <p>Наткнулся на эту игру примерно в 2015 году, тогда меня это мягко сказать поразило. Мне было ужасно приятно
+            смотреть на реалистичные разрушения машин. В этой игре нет какого либо сюжета, гонок. Это песочница</p>
+    </div>
+    <div class="otziv">
+        <img src="./../css/768.jpg" alt="avatar">
+        <p><span>hitor2015</span></p>
+        <p>Игра шикарная, нет слов. Графика, механика игры. Весь геймплей вообщем. Можно делать свои карты, свои машины
+            добавлять в качестве мода. В игре хорошая физика, просто превосходная. Любое столкновение с чем-либо
+            приводит к
+            каким-то последствиям. </p>
+    </div>
 </div>
 </body>
-
-
 </html>
