ready site(alright)

--- a/public_html/author.html
+++ b/public_html/author.html
@@ -5,18 +5,18 @@
     <title>Об авторе</title>
     <link href="./../css/for_author.css" rel="stylesheet"/>
 </head>
-     <body>
-     <div class="bg">
-    <div id="gall">
-        <img src="./../css/1.jpg" alt="1"/>
-        <img src="./../css/2.jpg" alt="2"/>
-        <img src="./../css/3.jpg" alt="3"/>
-    </div>
+<body>
+<div class="bg">
+    <button onclick="window.location.href = './game-site.html';">Главная</button>
+    <button onclick="window.location.href = './otzivi.html';">Отзывы</button>
+    <br>
+        <img class="gall" src="./../css/1.jpg" alt="1"/>
+        <img class="gall" src="./../css/2.jpg" alt="2"/>
+        <img class="gall" src="./../css/3.jpg" alt="3"/>
     <h2 class="info">Я - начинающий в мире программирования, который готов изучать новое
-    </h2>
-    <h2 class="info">
-    Самый молодой и перспективный(наверное) программист Нового города<br>
+        <br>
+        Самый молодой и перспективный(наверное) программист Нового города<br>
         Я нацелен на рост в IT-сфере</h2>
-     </div>
-    </body>
+</div>
+</body>
 </html>
