--- a/public_html/game-site.html
+++ b/public_html/game-site.html
@@ -9,10 +9,10 @@
 </head>
     <body>
     <div class="bg">
-    <button onclick="window.open('./otzivi.html')">
+    <button onclick="window.location.href = './otzivi.html';">
         Отзывы
     </button>
-    <button onclick="window.open('./author.html')">
+    <button onclick="window.location.href = './author.html';">
         Автор
     </button>
     <br>
