--- a/public_html/otzivi.html
+++ b/public_html/otzivi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Отзывы</title>
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div class="bg">
+    <button onclick="window.location.href = './game-site.html';">Главная</button>
+    <button onclick="window.location.href = './author.html';">Автор</button>
+    <br>
     <div class="verh">ОТЗЫВЫ ОБ ИГРЕ BeamNG DRIVE</div>
     <br>
     <div class="otziv">
@@ -48,6 +51,7 @@
             приводит к
             каким-то последствиям. </p>
     </div>
+    <br>
 </div>
 </body>
 </html>
